# trash-cli-rs

./: Cargo.toml  Justfile  LICENSE  README-zh.md  README.md
.github/workflows/: ci.yml
docs/: platform-differences.md  platform-differences_zh.md  release-checklist.md  release-checklist_zh.md  rm-option-compatibility.md  rm-option-compatibility_zh.md
src/: main.rs
tests/: cli.rs
