[package]
name = "trash-cli-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.85.0"
description = "A cross-platform command-line tool to move files to trash"
license = "MIT"
repository = "https://github.com/belingud/trash-cli-rs"
keywords = ["trash", "recycle", "delete", "cli"]

[[bin]]
name = "trash"
path = "src/main.rs"

[dependencies]
trash = "5"

[dev-dependencies]
tempfile = "3"
